2002-08-11  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for libxml version 2.3.0 or greater to ensure
	we have xpath support.
	* Source/NSDecimalNumber.m: implement ([-getValue:]) and
	([-initWithBytes:objCType:])

2002-08-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: ([-postNotification:]) Correct to
	post the actual notification we are given rather than a notification
	built from that one.  Bug report by Alexander Malmberg.

2002-08-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m: ([-globallyUniqueString]) Ensure that the
	string contains no dots, so it can be used as a filename under
	windoze.
	* Source/Additions/GSXML.m ([GSXMLNode -setNamespace:]): Documented.

2002-08-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-boolValue]) Accept 'true' as well as 'YES'
	* Source/NSThread.m: Modified to avoid using non-standard notification
	initialisation.
	* Source/NSNotification.m: Rewritten as abstract/cluster class for
	implementation compatibility with MacOS-X
	* Source/NSNotificationCenter.m: Modified posting to behave like the
	MacOS-X implementation.  Implement concrete subclass of
	NSNotification.
	* Source/NSUserDefaults.m: Try to make creation of new defaults
	database an atomic operation.
	* Source/NSObject.m: Remove dealloc notifications hack ... the
	dealloc method can now safely be used to refrain from deallocating
	objects, so I don't think the hack is needed any more.
	* Source/NSProcessInfo.m: ([-globallyUniqueString]) Update to ensure
	uniqueness across all hosts, processes, and threads.
	* Tools/gdomap.c: Tidyup patch by Matthias Klose

2002-07-29  Adam Fedor  <fedor@gnu.org>

	* Merge changes from 1.4.0 onto main branch.

2002-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpHandle.m: Always use runloop in NSConnectionReplyMode
	to avoid other NSDefaultRunLoopMode events being triggered while
	executing a DO method.  **EXPERIMENTAL**
